--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,5 +7,6 @@ requires-python = ">=3.12"
 dependencies = [
     "ucimlrepo>=0.0.7",
     "scikit-learn",
-    "concrete-ml"
+    "concrete-ml",
+    "flask>=3.1.0",
 ]
